--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dependency-check",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "A small tool to check if all package dependencies are production ready",
   "scripts": {
     "debug": "cd ./src && node --inspect-brk=0.0.0.0:5858 ./index.js ./files/composer.json ./files/package.json",
@@ -14,7 +14,7 @@
       "src/**/*.js"
     ]
   },
-  "bin": "app/src/bundle.js",
+  "bin": "src/bundle.js",
   "author": "Glenn de Haan",
   "license": "MIT",
   "engines": {
@@ -47,7 +47,8 @@
   },
   "dependencies": {
     "commander": "^2.19.0",
-    "listr": "^0.14.2"
+    "listr": "^0.14.2",
+    "pkg": "^4.3.5"
   },
   "devDependencies": {
     "eslint": "^5.0.1",
